# skibidi-lang

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/examples/: bf_skibidi_converter.rs  hello.skibidi  life.skibidi  tictactoe.skibidi
